--- a/architecture/index.html
+++ b/architecture/index.html
@@ -122,6 +122,8 @@
     <div class="intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
     </div>
+    <div class="blankHXS"></div>
+
     <div class="intro" data-aos="fade-up">
       <div class="introVer">
 
@@ -148,7 +150,7 @@
       design and technical solutions based on design research and studio requirements.</div>
   </div>
   <div class="centerHorz ver1">
-    <div class=" lineVerAll "></div>
+    <div class="lineVerAll "></div>
   </div>
 
 
