--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -139,7 +139,7 @@
 
 
     <!-- content-->
-    <div class="row heightM centerVer ">
+    <div class="rowVW heightM centerVer ">
       <p class="tArrow"> Methodology </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
@@ -184,7 +184,7 @@
     <div class="blankHL"></div>
 
     <!-- content-->
-    <div class="row heightM centerVer ">
+    <div class="rowVW heightM centerVer ">
       <p class="tArrow"> Site and Programs </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
