--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -137,7 +137,7 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Programs and Diagrams </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -163,7 +163,7 @@
 
 
   <!-- content-->
-  <div class="row  heightM centerVer marginAll marginAll">
+  <div class="rowVW  heightM centerVer marginAll marginAll">
     <p class="tArrow"> Renders</p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -184,7 +184,7 @@
   <!--Section Perspective -->
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Site and Floor Plan </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
