--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -154,7 +154,7 @@
   </div>
   <!--density-->
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Site and Research </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -196,7 +196,7 @@
   <div class="blankHXL"></div>
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Photos of Sequences and Movements </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -219,7 +219,7 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Manipulation </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -255,7 +255,7 @@
   <!--research-->
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> On Site </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
