--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -135,7 +135,7 @@
 
   <div class="blankHL"></div>
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Programs </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -173,7 +173,7 @@
   </div>
   <div class="blankHL"></div>
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Diagrams </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -238,7 +238,7 @@
   </div>
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Renders </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -250,6 +250,7 @@
     <!--renders 2-->
     <div class="column">
       <img src="render_int1.jpg" alt="DIAGRAM">
+      <div class="blankHXS"></div>
 
       <div class="widthM">
 
@@ -266,6 +267,8 @@
 
     <div class="column">
       <img src="render_int2.jpg" alt="DIAGRAM">
+      <div class="blankHXS"></div>
+
       <div class="widthM">
 
         <p class="titleL">INTERIOR VIEW</p>
@@ -299,7 +302,7 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Plans and Sections </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -368,7 +371,7 @@
 
   </div>
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Site </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
