--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -211,7 +211,7 @@
     <div class="blankHXL"></div>
 
     <!-- content-->
-    <div class="row heightM centerVer">
+    <div class="rowVW heightM centerVer">
       <p class="tArrow"> Abstract </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
@@ -378,7 +378,7 @@
 
 
     <!-- content-->
-    <div class="row  heightM centerVer  ">
+    <div class="rowVW  heightM centerVer  ">
       <p class="tArrow"> Results of Manipulations</p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
@@ -394,7 +394,7 @@
     </div>
     <!-- Results of Manipulations -->
     <!-- content-->
-    <div class="row  heightM centerVer  ">
+    <div class="rowVW  heightM centerVer  ">
       <p class="tArrow"> Architecture Projects</p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
@@ -458,7 +458,7 @@
   <!--video-->
   
   <!-- content-->
-  <div class="row  heightM centerVer marginAll marginAll">
+  <div class="rowVW  heightM centerVer marginAll marginAll">
     <p class="tArrow"> Drawings of multiple scales</p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -544,7 +544,7 @@
   <div class="blankHXL"></div>
 
   <!-- content-->
-  <div class="row  heightM centerVer marginAll marginAll">
+  <div class="rowVW  heightM centerVer marginAll marginAll">
     <p class="tArrow"> Photo Documentation</p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
