--- a/photography/index.html
+++ b/photography/index.html
@@ -119,9 +119,10 @@
     <div class="intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
     </div>
+    <div class="blankHXS"></div>
+
     <div class="intro" data-aos="fade-up">
       <div class="introVer">
-
         <div class="t-hi">I'm Vicky.</div>
       </div>
       <p class="divider"></p>
