--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -149,7 +149,7 @@
   <div class="blankHXL"></div>
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Initial Concepts </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -288,7 +288,7 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll">
+  <div class="rowVW marginAll heightM centerVer marginAll">
     <p class="tArrow"> Case Study </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -406,7 +406,7 @@
       </div>
       <div class="lineVerAll">
       </div>
-      <div class="row">
+      <div class="rowVW">
         <div class="column centerVer"> <img class="widthIconM marginIcon float"
             src="icon_userResearch.svg" alt="User Research">
           <p class="titleS">User Research</p>
@@ -423,7 +423,7 @@
 
 
     <div class="column">
-      <div class="row">
+      <div class="rowVW">
         <P class="titleM">USER RESEARCH </P>
         <img class="widthIconS float" src="icon_userResearch.svg" alt="User Research">
       </div>
@@ -463,7 +463,7 @@
     <div class="blankHM"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="rowVW">
         <P class="titleM">COMPETITIVE ANALYSIS</P>
         <img class="widthIconS float" src="icon_competitor.svg" alt="User Research">
       </div>
@@ -1079,7 +1079,7 @@
       </div>
       <div class="lineVerAll">
       </div>
-      <div class="row">
+      <div class="rowVW">
         <div class="column centerVer"> <img class="icon-l margin-s float"
             src="icon_contextualInquiries.svg" alt="User Research">
           <p class="titleS">Contextual Inquiries </p>
@@ -1093,7 +1093,7 @@
     </div>
     <br>
     <div class="column margin">
-      <div class="row">
+      <div class="rowVW">
         <P class="titleM">CONTEXTUAL INQUIRIES </P>
         <img class="widthIconS float" src="icon_contextualInquiries.svg" alt="User Research">
       </div>
@@ -1246,7 +1246,7 @@
     <div class="blankHXL"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="rowVW">
         <P class="titleM">IDENTIFYING PAIN POINTS</P>
         <img class="widthIconS float" src="icon_painpoints.svg" alt="User Research">
       </div>
@@ -1298,7 +1298,7 @@
       </div>
       <div class="lineVerAll">
       </div>
-      <div class="row">
+      <div class="rowVW">
         <div class="column centerVer"> <img class="icon-l margin-s float"
             src="icon_inforArchitecture.svg" alt="User Research">
           <p class="titleS">Information Architecture </p>
@@ -2675,7 +2675,7 @@
       </div>
       <div class="lineVerAll">
       </div>
-      <div class="row">
+      <div class="rowVW">
         <div class="column centerVer"> <img class="icon-l margin-s float" src="icon_prototype.svg"
             alt="User Research">
           <p class="titleS">Wireframes</p>
