--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -43,22 +43,26 @@
   <!-- gsap - ScrollTrigger-->
   <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <!-- gsap - ScrollTrigger-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js" integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!--materializecss.com-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css" integrity="sha512-t38vG/f94E72wz6pCsuuhcOPJlHKwPy+PY+n1+tJFzdte3hsIgYE7iEpgg/StngunGszVMrRfvwZinrza0vMTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!--materializecss.com-->
 
-
-
-
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Vicky Wang - Product Designer</title>
+  <meta name="description" content="Vicky Wang's Portfolio Website">
+  <meta name="keywords" content="Vicky Wang, Product Design, Product Designer, Architecture, San Francisco, UC Berkeley">
+  <meta name="author" content="Vicky Wang">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky Wang</title>
   <meta property="og:site_name" content="VICKY WANG">
-
   <meta property="og:url" content="/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
-  I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :) " />
+    I enjoy design and code who loves solving challenging problems. 
+    Interested in what you see? Shoot me an email :) " />
   <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
