--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
   <!-- gsap - ScrollTrigger-->
   <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <!-- gsap - ScrollTrigger-->
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js" integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!--materializecss.com-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css" integrity="sha512-t38vG/f94E72wz6pCsuuhcOPJlHKwPy+PY+n1+tJFzdte3hsIgYE7iEpgg/StngunGszVMrRfvwZinrza0vMTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!--materializecss.com-->
 
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vicky Wang - Product Designer</title>
   <meta name="description" content="Vicky Wang's Portfolio Website">
+  <meta name="keywords" content="Vicky Wang, Product Design, Product Designer, Architecture, San Francisco, UC Berkeley">
+  <meta name="author" content="Vicky Wang">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta property="og:site_name" content="VICKY WANG">
   <meta property="og:url" content="/" />
@@ -81,6 +86,7 @@
 </head>
 
 <body>
+  
   <!--head-->
   <!--progress bar-->
   <div class="header">
@@ -145,28 +151,33 @@
     <div class="t-intro zTop" data-aos="fade-up">
       Passionate about translating complex business requirements into compelling user
       experiences. While my focus is primarily on design, I don't mind occasionally writing code
-      when the need arises.</div>
+      when the need arises.
+    
+      I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS. Please visit my <a href="https://github.com/vicky-wyq"
+      class="textIntro">GitHub</a> repository for more details. 
+    
+    </div>
   </div>
   <div class="blankHM"></div>
 
   <!--intro-->
 
   <!-- content-->
-  <div class="row marginAll heightL centerVer">
+  <div class="rowVW marginAll heightL centerVer">
     <p class="tArrow"> Selected Projects </p>
     <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
 
   <!-- Product -->
-  <div class="carousel">
+  <div class="carouselAbout">
     <div class="AboutProjectNav nav-left">
       <img src="./arrow-left.svg" alt="left">
     </div>
 
     <div class="marginAll">
 
-      <div class="carousel-content">
+      <div class="carouselAbout-content">
         <div class="slide">
           <div class="rowChng centerVer">
             <a href="/project/meal_planner">
@@ -196,11 +207,11 @@
 
         <div class="slide">
           <div class="rowChng centerVer">
-            <a href="/appointment_maker">
+            <a href="/project/appointment_maker">
               <img class="widthL" src="./layout_AppointmentMaker.png" alt="APPOINTMENT MAKER">
             </a>
             <div class="column">
-              <p href="/alltrails" class="titleM"> APPOINTMENT MAKER</p>
+              <p href="/project/appointment_maker" class="titleM"> APPOINTMENT MAKER</p>
               <p class="lineHorizAll"></p>
               <p class="textS">Coming Soon</p>
               <p class="textS">Google UX Certificate Project 1</p>
@@ -253,19 +264,19 @@
   <!-- Product -->
 
   <!-- content-->
-  <div class="row marginAll heightL centerVer">
+  <div class="rowVW marginAll heightL centerVer">
     <a href="/architecture" class="tArrow"> Architecture</a>
     <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <!-- architecture-->
 
-  <div class="carousel">
+  <div class="carouselAbout">
     <div class="nav nav-left">
       <img src="./arrow-left.svg" alt="left">
     </div>
     <div class="marginAll">
-      <div class="carousel-content">
+      <div class="carouselAbout-content">
 
         <div class="slide">
           <div class="rowChng centerVer">
@@ -457,20 +468,20 @@
   <!-- architecture-->
 
   <!-- content-->
-  <div class="row marginAll marginAll heightL centerVer">
+  <div class="rowVW marginAll marginAll heightL centerVer">
     <a href="/photography" class="tArrow"> Photography </a>
     <img href="/photography" class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
 
   <!-- photography new-->
-  <div class="carousel">
+  <div class="carouselAbout">
     <div class="nav nav-left">
       <img src="./arrow-left.svg" alt="left">
     </div>
     <div class="marginAll">
 
-      <div class="carousel-content">
+      <div class="carouselAbout-content">
         <div class="slide">
           <div class="rowChng centerVer">
             <div class="column">
@@ -767,14 +778,14 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightL centerVer align-left">
+  <div class="rowVW marginAll heightL centerVer align-left">
     <p class="tArrow"> Design Philosophy </p>
     <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <div CLASS="marginAll centerHorz rowChng">
 
-    <div class="column marginS float alignCPH widthS padding-s ShadowBox border-radius">
+    <div class="column marginS float alignCPH widthM padding-s ShadowBox border-radius">
       <P class="titleM">Design Goal </P>
       <div class="lineHorizS"></div>
       <div class="blankHXS"></div>
@@ -796,9 +807,9 @@
       </ul>
 
     </div>
-    <div class="blankHM"></div>
+    <div class="blankVer"></div>
 
-    <div class="column marginS float alignCPH widthS padding-s ShadowBox border-radius">
+    <div class="column marginS float alignCPH widthM padding-s ShadowBox border-radius">
       <P class="titleM"> Design Philosophy </P>
       <div class="lineHorizS"></div>
       <div class="blankHXS"></div>
@@ -819,9 +830,9 @@
       </ul>
 
     </div>
-    <div class="blankHM"></div>
+    <div class="blankVer"></div>
 
-    <div class="column marginS float alignCPH widthS padding-s ShadowBox border-radius">
+    <div class="column marginS float alignCPH widthM padding-s ShadowBox border-radius">
       <P class="titleM"> Knowledge of Code </P>
       <div class="lineHorizS"></div>
       <div class="blankHXS"></div>
@@ -846,7 +857,6 @@
 
     </div>
 
-    <div class="blankHM"></div>
 
   </div>
 
@@ -854,13 +864,13 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightL centerVer align-left">
+  <div class="rowVW marginAll heightL centerVer align-left">
     <p class="tArrow"> Desired Working Environment </p>
     <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <div CLASS="marginAll centerHorz rowChng">
-    <div class="column marginS float alignCPH widthS padding-s ShadowBox border-radius">
+    <div class="column marginS float alignCPH widthM padding-s ShadowBox border-radius">
       <P class="titleM"> Creative & Collaborative </P>
       <div class="lineHorizS"></div>
       <div class="blankHXS"></div>
@@ -869,9 +879,9 @@
         encouraged
       </p>
     </div>
-    <div class="blankHM"></div>
+    <div class="blankVer"></div>
 
-    <div class="column marginS float alignCPH widthS padding-s ShadowBox border-radius">
+    <div class="column marginS float alignCPH widthM padding-s ShadowBox border-radius">
       <P class="titleM"> Autonomy </P>
       <div class="lineHorizS"></div>
       <div class="blankHXS"></div>
@@ -882,9 +892,9 @@
 
 
     </div>
-    <div class="blankHM"></div>
+    <div class="blankVer"></div>
 
-    <div class="column marginS float alignCPH widthS padding-s ShadowBox border-radius">
+    <div class="column marginS float alignCPH widthM padding-s ShadowBox border-radius">
       <P class="titleM"> Transparency </P>
       <div class="lineHorizS"></div>
       <div class="blankHXS"></div>
@@ -894,15 +904,13 @@
 
 
     </div>
-    <div class="blankHM"></div>
-
   </div>
   <div class="blankHS"></div>
 
   <div class="blankHM"></div>
 
   <!-- content-->
-  <div class="row marginAll heightL centerVer align-left">
+  <div class="rowVW marginAll heightL centerVer align-left">
     <p class="tArrow"> About Me </p>
     <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
   </div>
