--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -97,18 +97,18 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/project/" class="inactive head-right-1550 box">
+      <a href="/project/" class="inactive  box">
         PROJECT
       </a>
-      <a href="/architecture" class="active head-right-1550 box">
+      <a href="/architecture" class="active  box">
         ARCHITECTURE
       </a>
 
-      <a href="/photography" class="inactive head-right-1550 box">
+      <a href="/photography" class="inactive  box">
         PHOTOGRAPHY
       </a>
 
-      <a href="/" class="inactive head-right-1550 box">
+      <a href="/" class="inactive  box">
         ABOUT
       </a>
     </div>
