--- a/project/appointment_maker/index.html
+++ b/project/appointment_maker/index.html
@@ -103,18 +103,18 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/project" class="active head-right-1550 box">
+      <a href="/project" class="active  box">
         PROJECT
       </a>
-      <a href="/architecture" class="inactive head-right-1550 box">
+      <a href="/architecture" class="inactive  box">
         ARCHITECTURE
       </a>
 
-      <a href="/photography" class="inactive head-right-1550 box">
+      <a href="/photography" class="inactive  box">
         PHOTOGRAPHY
       </a>
 
-      <a href="/" class="inactive head-right-1550 box">
+      <a href="/" class="inactive  box">
         ABOUT
       </a>
 
