--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -95,18 +95,18 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/project/" class="active head-right-1550 box">
+      <a href="/project/" class="active  box">
         PROJECT
       </a>
-      <a href="/architecture" class="inactive head-right-1550 box">
+      <a href="/architecture" class="inactive  box">
         ARCHITECTURE
       </a>
 
-      <a href="/photography" class="inactive head-right-1550 box">
+      <a href="/photography" class="inactive  box">
         PHOTOGRAPHY
       </a>
 
-      <a href="/" class="inactive head-right-1550 box">
+      <a href="/" class="inactive  box">
         ABOUT
       </a>
     </div>
@@ -1258,13 +1258,13 @@
     <div class="blankHL"></div>
 
     <div class="column">
-      <P class="titleM centerHorz padding-l">Affinity Mapping Pain Points </P>
+      <P class="titleM centerHorz paddingL">Affinity Mapping Pain Points </P>
       <img class="" src="affinity_mapping1.svg" alt="User Research">
     </div>
     <div class="blankHL"></div>
 
     <div class="column">
-      <P class="titleM centerHorz padding-l">Organize the pain points together into group of
+      <P class="titleM centerHorz paddingL">Organize the pain points together into group of
         similar notes
 
       </P>
@@ -1273,7 +1273,7 @@
     <div class="blankHL"></div>
 
     <div class="column">
-      <P class="titleM centerHorz padding-l">Prioritise and label pain points </P>
+      <P class="titleM centerHorz paddingL">Prioritise and label pain points </P>
       <img class="" src="affinity_mapping3.svg" alt="User Research">
     </div>
   </div>
@@ -2697,25 +2697,25 @@
     </div>
     <div class="carouselContentGH">
       <div class="slideGH">
-        <img class="widthS widthS1920" src="lf_1.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS " src="lf_1.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="lf_2.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS " src="lf_2.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="lf_3.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS " src="lf_3.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="lf_4.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS " src="lf_4.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="lf_6.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS " src="lf_6.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="lf_7.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS " src="lf_7.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="lf_8.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS " src="lf_8.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
     </div>
     <div class="nav-gh nav-right-gh">
@@ -2736,73 +2736,73 @@
     </div>
     <div class="carouselContentGH">
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_ld.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_ld.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_ld1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_ld1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_ld2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_ld2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_rg1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_rg1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_rg2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_rg2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_rg3.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_rg3.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_rg4.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_rg4.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_rg5.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_rg5.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_login1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_login1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_login2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_login2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_login3.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_login3.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_home.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_home.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_home1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_home1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_home2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_home2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_sell1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_sell1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_sell2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_sell2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_sell3.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_sell3.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_sell4.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_sell4.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_plantpf1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_plantpf1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_plantpf2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_plantpf2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_plantpf3.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_plantpf3.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_ua.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_ua.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthS widthS1920" src="mf_ua1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS " src="mf_ua1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
     </div>
     <div class="nav-gh nav-right-gh">
@@ -2818,7 +2818,7 @@
   <div class="colorGHBg">
 
     <div class="blankHM"></div>
-    <div class="marginAll marginAll">
+    <div class="marginAll">
       <P class="titleM ">HIGH-FIDELITY WIREFRAMES </P>
       <div class="blankHM"></div>
 
@@ -2831,84 +2831,84 @@
       </div>
       <div class="carouselContentGH">
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_landing.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_landing.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_landing1.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_landing1.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_obd1.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_obd1.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_obd2.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_obd2.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_obd3.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_obd3.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_rg1.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_rg1.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_rg2.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_rg2.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_rg3.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_rg3.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_rg4.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_rg4.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_rg5.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_rg5.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_login1.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_login1.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_login2.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_login2.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_login3.png" alt="HIGH-FIDELITY WIREFRAMES">
-        </div>
-
-        <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_home1.png" alt="HIGH-FIDELITY WIREFRAMES">
-        </div>
-        <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_home2.png" alt="HIGH-FIDELITY WIREFRAMES">
-        </div>
-        <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_home3.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_login3.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
 
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_pp1.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_home1.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_pp2.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_home2.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_pp3.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_home3.png" alt="HIGH-FIDELITY WIREFRAMES">
+        </div>
+
+        <div class="slideGH">
+          <img class="widthS" src="hf_pp1.png" alt="HIGH-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="widthS" src="hf_pp2.png" alt="HIGH-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="widthS" src="hf_pp3.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
 
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_sell1.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_sell1.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_sell2.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_sell2.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_sell3.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_sell3.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
 
 
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_ua1.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_ua1.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_ua2.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_ua2.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920" src="hf_ua3.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS" src="hf_ua3.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
 
       </div>
