--- a/testing_pushpin/index.html
+++ b/testing_pushpin/index.html
@@ -84,66 +84,18 @@
 </head>
 
 <body>
-  <!--head-->
-  <!--progress bar-->
-  <div class="header">
-    <div class="progress-container">
-      <div class="progress-bar" id="myBar"></div>
-    </div>
+
+  <div id="yellow" class="yellow block" style="height: 100%">
+    <nav id="pushpin" class="pushpin yellow" data-target="yellow">Yellow</nav>
   </div>
-  <!--progress bar-->
-  <div class="main-tool-bar">
-    <div class="head-left">
-      <a href="http://vickywang.me/" class="pointer">VW
-      </a>
-    </div>
-    <div class="head-right ">
-      <a href="/project/" class="active  box">
-        PROJECT
-      </a>
-      <a href="/architecture" class="inactive  box">
-        ARCHITECTURE
-      </a>
-
-      <a href="/photography" class="inactive  box">
-        PHOTOGRAPHY
-      </a>
-
-      <a href="/" class="inactive  box">
-        ABOUT
-      </a>
-    </div>
+  <div id="red" class="red block" style="height: 100%">
+    <nav id="pushpin" class="pushpin" class="red" data-target="red">Red</nav>
   </div>
-  <span id="circle" class="circle"></span>
-
-  <!--head-->
-
+  
 
   <!--about mealplanner-->
 
-  <div class="colorMPbg" id="bg-color-triggerMP">
-    <div class="blankProject"></div>
 
-
-    <div class="rowChng centerHorz centerVer alignCPH">
-      <img src="../../layout_MealPlanner.png" alt="Meal Planner" class="widthXL">
-      <div class="column">
-        <P class="titleL">MEAL PLANNER</P>
-        <p class="lineHorizAll"></p>
-        <p class="textS"> <strong>My Role:</strong> &nbsp; </p>
-        <p class="textS">Design Research, UX/UI Design, Visual Design</p>
-        <p class="textS">Wireframing, Branding, Prototyping</p>
-        <p class="textS"> Interaction Design, Usability Testing </p>
-
-        <p class="textS"><strong>Duration:</strong> &nbsp; </p>
-        <p class="textS"> 4 Weeks 20+ Screens
-        </p>
-      </div>
-    </div>
-    <div class="blankHM"></div>
-    <div class="blankProjectS"></div>
-
-  </div>
   <!--about mealplanner-->
   <div class="colorGrey">
 
