--- a/index.html
+++ b/index.html
@@ -87,13 +87,15 @@
 <body>
 
   <!--head-->
-  <!--progress bar-->
+
+
+  <!--progressBarScroll-->
   <div class="header">
     <div class="progress-container">
-      <div class="progress-bar" id="myBar"></div>
+      <div class="progress-bar" id="progressBar"></div>
     </div>
   </div>
-  <!--progress bar-->
+  <!--progressBarScroll-->
 
   <div class="main-tool-bar">
     <div class="head-left">
@@ -121,7 +123,9 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
+
   <!--intro-->
+
 
 
   <div class="blankProject"></div>
@@ -144,7 +148,7 @@
           <span class="t-me"> problem solver. </span>
         </div>
         <div class="rowChng">
-          <span class="t-me t-meS centerHorz"> based in the &nbsp;</span>
+          <span class="t-me"> based in the &nbsp;</span>
           <span class="t-me"> San Francisco Bay Area </span>
         </div>
 
@@ -155,7 +159,8 @@
       experiences. While my focus is primarily on design, I don't mind occasionally writing code
       when the need arises.
 
-      I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS. Please
+      I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS.
+      Please
       visit my <a href="https://github.com/vicky-wyq" class="textIntro">GitHub</a> repository for
       more details.
 
@@ -181,6 +186,21 @@
     <div class="marginInner">
 
       <div class="carouselAbout-content">
+
+        <div class="slide">
+          <div class="rowChng centerVer">
+            <a href="/project/appointment_maker">
+              <img class="widthL" src="./layout_AppointmentMaker.png" alt="APPOINTMENT MAKER">
+            </a>
+            <div class="column paddingL">
+              <p href="/project/appointment_maker" class="titleM"> APPOINTMENT MAKER</p>
+              <p class="lineHorizAll"></p>
+              <p class="textS displayNonePhone">Coming Soon</p>
+              <p class="textS displayNonePhone">Google UX Certificate Project 1</p>
+              <p class="textXS displayNonePhone">4 Weeks 30+ Screens</p>
+            </div>
+          </div>
+        </div>
         <div class="slide">
           <div class="rowChng centerVer">
             <a href="/project/meal_planner">
@@ -208,20 +228,7 @@
           </div>
         </div>
 
-        <div class="slide">
-          <div class="rowChng centerVer">
-            <a href="/project/appointment_maker">
-              <img class="widthL" src="./layout_AppointmentMaker.png" alt="APPOINTMENT MAKER">
-            </a>
-            <div class="column paddingL">
-              <p href="/project/appointment_maker" class="titleM"> APPOINTMENT MAKER</p>
-              <p class="lineHorizAll"></p>
-              <p class="textS displayNonePhone">Coming Soon</p>
-              <p class="textS displayNonePhone">Google UX Certificate Project 1</p>
-              <p class="textXS displayNonePhone">4 Weeks 30+ Screens</p>
-            </div>
-          </div>
-        </div>
+
 
 
 
@@ -852,7 +859,8 @@
         <li class="textS"> Understand user: define problems and provide solutions concisely
         </li>
         <li class="textS"> Enhances a product's usability: design principle including the scale,
-          hierarchy, balance, contrast, repetition, rhythm, Pattern, white space, movement, variety,
+          hierarchy, balance, contrast, repetition, rhythm, Pattern, white space, movement,
+          variety,
           unity </li>
 
         <li class="textS"> Increase brand awareness: consistency of design elements, such as line,
@@ -873,7 +881,8 @@
         <p class="titleS"> Simplicity is key “Less is More” </p>
         <div class="blankHXS"></div>
         <li class="textS"> The design goal is to create simple, easy-to-follow designs that get
-          people from where they are to where they want to be quickly, efficiently, and effectively.
+          people from where they are to where they want to be quickly, efficiently, and
+          effectively.
         </li>
         <li class="textS"> A good design format that people can interface with and understand
           easily. </li>
@@ -895,11 +904,13 @@
         <p class="titleS">Unity of Research + Design + Implementation</p>
         <div class="blankHXS"></div>
 
-        <p class="textS"> "An architect would understand the properties of concrete, so why wouldn't
+        <p class="textS"> "An architect would understand the properties of concrete, so why
+          wouldn't
           a designer understand the properties of code?" Aarron Walter
         </p>
         <p class="textS">
-          As a former architect and UI/UX designer who believe in the integration between design and
+          As a former architect and UI/UX designer who believe in the integration between design
+          and
           build is very significant
         </p>
 
@@ -929,7 +940,8 @@
       <P class="titleM"> Creative & Collaborative </P>
       <div class="lineHorizS"></div>
       <div class="blankHXS"></div>
-      <p class="textS"> My goal is to make great design with great people. Looking for a place that
+      <p class="textS"> My goal is to make great design with great people. Looking for a place
+        that
         has a creative and collaborative culture where sharing, helping and lifting others up is
         encouraged
       </p>
@@ -1139,6 +1151,8 @@
   </div>
 
   <div class="blankHM"></div>
+
+
   <div class="containerTQ">
     <img src="./me.jpg" alt="right">
     <div class="centeredTQ">
