--- a/project/appointment_maker/index.html
+++ b/project/appointment_maker/index.html
@@ -261,7 +261,17 @@
   </div>
 
   <!--about appointmentmaker-->
+  <!--redo this project-->
 
+
+
+
+
+
+
+
+  
+  <!--redo this project-->
 
   <div class="blankHM"></div>
   <P class="centerHorz titleL">Design Thinking Process</P>
