--- a/project/index.html
+++ b/project/index.html
@@ -1,11 +1,10 @@
 <html>
 
 <head>
+
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript" src="../scripts.js"></script>
-
-
 
 
   <link
@@ -47,25 +46,15 @@
   <!-- gsap - ScrollTrigger-->
   <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <!-- gsap - ScrollTrigger-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
-    integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!--materializecss.com-->
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css"
-    integrity="sha512-t38vG/f94E72wz6pCsuuhcOPJlHKwPy+PY+n1+tJFzdte3hsIgYE7iEpgg/StngunGszVMrRfvwZinrza0vMTA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!--materializecss.com-->
-
 
 
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Vicky Wang - Product Designer</title>
-  <meta name="description" content="Vicky Wang's Portfolio Website">
+  <meta name="description" content="Vicky Wang's Portfolio">
   <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, Architecture, San Francisco, UC Berkeley">
+    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -74,10 +63,10 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
-    I enjoy design and code who loves solving challenging problems. 
-    Interested in what you see? Shoot me an email :) " />
+      I enjoy design and code who loves solving challenging problems. 
+      Interested in what you see? Shoot me an email :) " />
   <meta property="og:image"
-    content="//https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpeg" />
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
@@ -93,18 +82,17 @@
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
-
 </head>
 
 <body>
-  <!--head-->
-  <!--progress bar-->
+  <!--progressBarScroll-->
   <div class="header">
     <div class="progress-container">
-      <div class="progress-bar" id="myBar"></div>
+      <div class="progress-bar" id="progressBar"></div>
     </div>
   </div>
-  <!--progress bar-->
+  <!--progressBarScroll-->
+
   <div class="main-tool-bar">
     <div class="head-left">
       <a href="http://vickywang.me/" class="pointer">VW
@@ -122,7 +110,7 @@
         PHOTOGRAPHY
       </a>
 
-      <a href="/" class="inactive  box">
+      <a href="/" class="inactive box">
         ABOUT
       </a>
     </div>
@@ -130,7 +118,7 @@
   <!--head-->
   <span id="circle" class="circle"></span>
 
-  <!--body-->
+
   <!--intro-->
 
   <div class="blankProject"></div>
@@ -174,12 +162,7 @@
   </div>
   <div class="blankHM"></div>
 
-  <div class="centerHorz ver1">
-    <div class=" lineVerAll "></div>
-  </div>
-
   <!--intro-->
-
 
   <!-- content-->
   <div class="rowVW marginAll heightM centerVer marginAll">
@@ -255,10 +238,9 @@
 
 
   <!--Responsive Web-->
-
-
-
-  <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
+  <!--
+    
+      <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
     <div class="column widthM">
       <p href="/project/indie" class="titleL" data-aos="fade-up">Indie Rock bands Website</p>
@@ -276,12 +258,16 @@
       <img src="../layout_IndieRockbands.png" alt="Meal Planner">
     </p>
   </div>
+  -->
+
+
+
+
   <!--Responsive Web-->
-  <div class="blankHL"></div>
 
   <!--Social Good-->
-
-
+  <!--
+    
   <div class="rowChng marginAll marginAll centerHorz centerVer">
 
     <p href="/project/meal_planner">
@@ -301,9 +287,12 @@
     </div>
 
   </div>
+  -->
+
+
+
 
   <!--Social Good-->
-  <div class="blankHXL"></div>
 
 
   <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
@@ -347,6 +336,11 @@
     </div>
   </div>
   <!--footer-->
+
+
+
+
+
 
 
 
